# asset

./: .gitignore  README.md  START_HERE.md  VITALITY_NEXUS_SPEC.md
.claude/: launch.json
.github/workflows/: build-windows.yml
backend/: .gitignore  README.md  requirements-dev.txt  requirements.txt
backend/app/: cache.py  db.py  keychain.py  main.py  paths.py  schemas.py
backend/app/adapters/: base.py  bithumb.py  kis.py  kiwoom.py  krx.py  manual.py  upbit.py  yahoo.py
backend/app/routes/: holdings.py  portfolio.py
backend/data/: holdings.example.json
backend/scripts/: build_sidecar.py  set_api_key.py
backend/tests/: test_smoke.py
organic-core/: AuroraBackground.tsx  GUIDE.md  HeartCore.tsx  LifeParticles.tsx  OrganicCoreScene.tsx  ReflectiveFloor.tsx  glass-cards.css  lifeColors.ts  useAdaptiveQuality.ts
prototype/: full-dashboard-v2.html
vitality-nexus/: README.md  index.html  package-lock.json  package.json  vite.config.ts
vitality-nexus/scripts/: anim-diag.mjs  camera-check.mjs  capture-app.mjs  capture-stage.mjs  capture-url.mjs  chart-check.mjs  console-check.mjs  drag-check.mjs  fps-check.mjs  heart-timelapse.mjs  kiwoom-check.mjs  make-icon.mjs  net-diag.mjs  rankhover-check.mjs  ripple-check.mjs  ripple-diag.mjs  serve-dist-csp.mjs
vitality-nexus/src/: App.tsx  index.css  main.tsx
vitality-nexus/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.ci.conf.json  tauri.conf.json
vitality-nexus/src-tauri/capabilities/: default.json
vitality-nexus/src-tauri/icons/: icon.icns
vitality-nexus/src-tauri/src/: backend.rs  lib.rs  main.rs
(+36 files in other folders)
